2011-08-08 Dario Rodriguez <dario.rodriguez@artica.es>

	* operation/agentes/sla_view.php: Fixed a bug related to a function
	with a wrong name. 

2011-08-08  Sergio Martin <sergio.martin@artica.es>

	* include/config_process.php
	operation/users/user_edit.php
	godmode/setup/setup_visuals.php: Fixed global block size
	edition and user config default block size setting
	for bug 3388207

2011-08-08 Juan Manuel Ramon <juanmanuel.ramon@artica.es>
	* images/skin/skin_default/include/styles/pandora.css
	include/styles/pandora.css: pagination margin is very small in some 
	places.

	Fixes: #3388210 	

2011-08-05 Javier Lanz <javier.lanz@artica.es>

	* godmode/servers/plugin.php: Fixed blank names creating & updating
	pluings

	Fixes: #3371409

2011-08-05 Javier Lanz <javier.lanz@artica.es>

	* godmode/servers/recon_script.php: Fixed blank names creating and
	updating reconscripts

	Fixes: #3371409

2011-08-05 Javier Lanz <javier.lanz@artica.es>

	* godmode/tag/edit_tag.php: Fixed blank names creating & updating
	tags

	Fixes: #3371409

2011-08-04 Javier Lanz <javier.lanz@artica.es>

	* godmode/setup/links.php: Fixed blank names creating & updating links

	Fixes: #3371409

2011-08-04 Javier Lanz <javier.lanz@artica.es>

	* godmode/setup/os.php: Fixed blank names in OS names

	Fixes: #3371409

2011-08-04 Javier Lanz <javier.lanz@artica.es>

	* godmode/reporting/visual_console_builder.php: Fixed blank names in
	maps in visual console builder

	Fixes: #3371409

2011-08-04 Javier Lanz <javier.lanz@artica.es>

	* godmode/reporting/reporting_builder.php: Fixed blank names in reports

	Fixes: #3371409

2011-08-04 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* install.php: Improved css style in installer.	

2011-08-04  Ramon Novoa  <rnovoa@artica.es>

	* pandoradb.sql,
	  extras/pandoradb_migrate_v3.2_to_v4.0.sql: Added two indexes to the
	  database schema to improve queries on talert_template_modules and
	  tserver_export. Thanks to Manuel Arostegui.
