@@ -1,3 +1,9 @@
+2011-08-08  Ramon Novoa  <rnovoa@artica.es>
+
+	* pandoradb.sql, extras/pandoradb_migrate_v3.2_to_v4.0.sql: Added an
+	  index on tagente_modulo.nombre to improve alert listings. Thanks to
+	  Manuel Arostegui. 
+
 2011-08-08 Dario Rodriguez <dario.rodriguez@artica.es>
 
 	* operation/agentes/sla_view.php: Fixed a bug related to a function
